v1.3.0, bump plugins, remove javafx dependency, some cleanup